# gtkaux-gtk4-x11

./: Readme.md  debug.vala  gtk3.sh  gtk3aux-x11.h  gtk4.sh  gtk4aux-x11.h  gtk_immediate.vala  gtk_link.vala  meson.build  meson_options.txt  patched_gtk4-x11.vapi  public_basetool.vala  public_enum.vala  public_gdk.vala  public_gdk_hint_base.vala  public_gdk_hint_more.vala  public_gdk_legacy.vala  public_gtk.vala  test.vala  x11_atom.vala  x11_delegate.vala  x11_desktop_number.vala  x11_display.vala  x11_geometry.vala  x11_hint.vala  x11_override_redirect.vala  x11_strut.vala
src/basic/: basic_api_display.vala  debug.vala  helper_setdata.vala
src/c/: c_xrandr_get_screen_size.c  c_xrandr_get_screen_size.h  c_xrandr_get_screen_size.vapi
src/compatible/: enum.vala  gdk.vala  gtk.vala
src/gdk/gdk3/: gdk_api_basic.vala  gdk_api_extra.vala  gdk_api_geometry.vala  gdk_api_hint.vala  gdk_api_tool.vala
src/gdk/gdk4/: gdk_api_basic.vala  gdk_api_extra.vala  gdk_api_geometry.vala  gdk_api_hint.vala  gdk_api_tool.vala
src/gtk/api/: gtk_api_basic.vala  gtk_api_geometry.vala  gtk_api_hint.vala  gtk_api_tool.vala
src/gtk/api/gtk3/: gtk_api_extra.vala
src/gtk/api/gtk4/: gtk_api_extra.vala
src/gtk/internal/: gtk_data.vala  signal_api.vala  signal_core.vala
src/x11/api/: x11_api_desktop_number.vala  x11_api_display.vala  x11_api_enum_hint.vala  x11_api_geometry.vala  x11_api_hint.vala  x11_api_override_redirect.vala  x11_api_strut.vala
src/x11/api/geometry/: x11_api_geometry.vala  x11_api_geometry_percent.vala  x11_api_geometry_target.vala  x11_api_strut.vala
src/x11/api/hint/: x11_api_hint.vala  x11_api_hint_enum.vala
src/x11/internal/: xdisplay_display.vala  xdisplay_ewmh_atom.vala  xdisplay_ewmh_desktop_number.vala  xdisplay_ewmh_hint.vala  xdisplay_ewmh_strut.vala  xdisplay_geometry.vala  xdisplay_override_redirect.vala
src/x11/internal/c/: c_xrandr_get_screen_size.c  c_xrandr_get_screen_size.vala  c_xrandr_get_screen_size.vapi
src/x11/internal/ewmh/: xdisplay_ewmh_atom.vala  xdisplay_ewmh_desktop_number.vala  xdisplay_ewmh_hint.vala  xdisplay_ewmh_strut.vala
test/: test.vala
